# omnigent

./: openapi.json  pyproject.toml  uv.toml
.github/scripts/changelog/: generate.py
.github/scripts/pr-template/: _md.py
.github/scripts/security-scan/: should-scan.sh
.github/workflows/: benchmark-pr.yml  draft-release-notes.yml  e2e-ui.yml  e2e.yml  feature-blog.yml  integration.yml  issue-triage.yml  merge-ready.yml  release.yml  rerun-security-gate-run.yml  rerun-security-gate.yml  security-scan.yml
ap-web/: package-lock.json
ap-web/src/components/: AgentInfo.test.tsx  AgentInfo.tsx
ap-web/src/hooks/: useAgents.ts  useSessionLiveness.test.ts  useSessionLiveness.ts
ap-web/src/lib/: events.ts  sessionEvents.test.ts  sessionsApi.test.ts  sessionsApi.ts  sse.ts  types.ts
ap-web/src/pages/: ChatPage.tsx
ap-web/src/shell/: AppShell.subagent-nav.test.tsx  AppShell.test.tsx  SubagentsPanel.test.tsx  SubagentsPanel.tsx
deploy/islo/: README.md
dev/benchmarks/omnigent/: compare.py
docs/: AGENT_YAML_SPEC.md
integrations/slack/: README.md  pyproject.toml
integrations/slack/src/omnigent_slack/: app.py  approvals.py  auth_manager.py  events.py  notifications.py  oauth.py  omnigent.py  service.py  setup.py  tokens.py
integrations/slack/tests/: test_approvals.py  test_auth_manager.py  test_client_auth.py  test_config.py  test_notifications.py  test_oauth.py  test_omnigent.py  test_service.py  test_setup.py  test_tokens.py
omnigent/: claude_native_forwarder.py  cli.py  pi_native_credentials.py  workspace_fs.py
omnigent/db/: db_models.py  enum_codecs.py
omnigent/db/migrations/versions/: d7f1a2b3c4e5_add_conversation_metadata_live_state.py
omnigent/entities/: conversation.py
omnigent/host/: connect.py
omnigent/inner/: bwrap_sandbox.py  claude_sdk_executor.py  claude_sdk_harness.py  copilot_executor.py  databricks_executor.py  openai_agents_sdk_executor.py  pi_executor.py  seatbelt_sandbox.py
omnigent/llms/adapters/: anthropic.py  gemini.py
omnigent/onboarding/sandboxes/: base.py  cwsandbox.py  islo.py  modal.py  openshell.py
omnigent/runner/: app.py  mcp_manager.py  proxy_mcp_manager.py  tool_dispatch.py
omnigent/runtime/: llm_retry.py  pending_elicitations.py
omnigent/runtime/harnesses/: _scaffold.py
omnigent/server/: app.py  managed_hosts.py  schemas.py  session_live_state.py
omnigent/server/routes/: builtin_agents.py  runner_tunnel.py  session_mcp_servers.py  sessions.py
omnigent/stores/conversation_store/: __init__.py  sqlalchemy_store.py
omnigent/testing/: guardrails.py
sdks/python-client/: pyproject.toml
sdks/ui/: pyproject.toml
tests/: test_claude_native_forwarder.py  test_pi_native_credentials.py  test_workspace_fs.py
tests/cli/: test_backend.py
tests/e2e/: test_non_git_changed_files_e2e.py
tests/e2e/omnigent/: test_run_harness_without_agent_e2e.py
tests/e2e_ui/agents/: test_agent_info_popover.py
tests/e2e_ui/files/: test_notebook_preview.py
tests/e2e_ui/sessions/: test_host_asleep_composer.py  test_sidebar_mark_unread.py
tests/e2e_ui/shells/: test_terminal_session_links.py
tests/e2e_ui/start_session/: test_start_session.py
tests/github/: test_changelog_generate.py
tests/harness_bench/: bench.py  manifest.py  native_tui_driver.py  test_bench.py
tests/host/: test_connect.py
tests/inner/: test_bwrap_sandbox.py  test_claude_sdk_executor.py  test_claude_sdk_harness.py  test_copilot_executor.py  test_databricks_executor.py  test_openai_agents_sdk_executor.py  test_pi_executor.py
tests/llms/: conftest.py  test_anthropic_adapter.py  test_client.py  test_gemini_adapter.py  test_openai_adapter.py
tests/onboarding/sandboxes/: test_cwsandbox.py  test_islo.py  test_modal.py  test_openshell.py
tests/runner/: test_app_sessions_native.py  test_mcp_manager.py  test_runner_dispatch.py
tests/server/: helpers.py  test_app.py  test_managed_hosts.py  test_resolve_url_wakes_harness_park.py  test_session_live_state.py
tests/server/integration/: test_host_session_binding.py  test_runner_tunnel_route.py  test_session_mcp_servers.py  test_sessions_archive.py  test_sessions_child_sessions.py  test_sessions_endpoints.py
tests/server/routes/: test_sessions_crud.py
tests/stores/: test_conversation_store.py
tests/testing/: test_guardrails.py
web/src/components/blocks/: TerminalSession.test.ts  TerminalSession.ts
web/src/hooks/: useConversations.test.ts  useConversations.ts  useUnseenConversations.test.ts  useUnseenConversations.ts
web/src/shell/: CodeViewer.test.tsx  CodeViewer.tsx  FileViewer.tsx  NewChatDialog.projectPrefill.test.tsx  NewChatDialog.test.tsx  NewChatDialog.tsx  NotebookPreview.test.tsx  NotebookPreview.tsx  codeViewerHelpers.test.ts  codeViewerHelpers.ts  projectPrefill.test.ts  projectPrefill.ts
web/src/shell/__fixtures__/: 01_typical.ipynb  02_edgecases.ipynb  03_broken.ipynb
web/src/store/: chatStore.test.ts  chatStore.ts
